# estimateWB

./: .editorconfig  .gitignore  MANIFEST.in  Overview.md  README.md  manifest.ini  package.xml  pyproject.toml  setup.py  versionupdate.py
freecad/estimate/: __init__.py  commands.py  init_gui.py  tools.py
freecad/estimateWB/: __init__.py  commands.py  init_gui.py  resources.py  tools.py
freecad/estimateWB/languages/: English.json  German.json
freecad/estimateWB/resources/: materials.json
